libstdc++-v3/testsuite/27_io/filesystem/operations/create_directories.cc
@@ -70,12 +70,20 @@ test01()
   b = fs::create_directories( p/"./d4/../d5", ec );
   VERIFY( !ec );
   VERIFY( b );
+#if defined(__MINGW32__) || defined(__MINGW64__)
+  // create_directories("./d4/..") is a no-op, does not create "d4"
+#else
   VERIFY( is_directory(p/"d4") );
+#endif
   VERIFY( is_directory(p/"d5") );
   VERIFY( is_directory(p/"./d4/../d5") );
 
   std::uintmax_t count = remove_all(p, ec);
+#if defined(__MINGW32__) || defined(__MINGW64__)
+  VERIFY( count == 5 );
+#else
   VERIFY( count == 6 );
+#endif
 }
 
 void
@@ -92,9 +100,11 @@ test02()
     result = create_directories(file.path, ec);
     VERIFY( !result );
     VERIFY( ec == std::errc::not_a_directory );
+    ec.clear();
     result = create_directories(file.path / "foo", ec);
     VERIFY( !result );
     VERIFY( ec == std::errc::not_a_directory );
+    ec.clear();
   }
 
   create_directories(p);
@@ -105,9 +115,18 @@ test02()
     result = create_directories(file.path, ec);
     VERIFY( !result );
     VERIFY( ec == std::errc::not_a_directory );
+    ec.clear();
     result = create_directories(file.path/"../bar", ec);
+#if defined(__MINGW32__) || defined(__MINGW64__)
+    VERIFY( result );
+    VERIFY( !ec );
+    VERIFY( is_directory(dir.path/"bar") );
+    remove(dir.path/"bar");
+#else
     VERIFY( !result );
     VERIFY( ec == std::errc::not_a_directory );
+    VERIFY( !is_directory(dir.path/"bar") );
+#endif
   }
 }
 
